k8s/dev/dep-database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-database-sae5-x21-dev
  namespace: ns-sae5-x21
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database-dev
  template:
    metadata:
      labels:
        component: database-dev
    spec:
      containers:
        - name: db-sae5-x21-dev
          image: forge-registry.iut-larochelle.fr/mariadb/mariadb-10.10.2
          ports:
            - containerPort: 3306
      imagePullSecrets:
        - name: gitlab-auth
