k8s/dev/dep-sfapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep-sfapi-sae5-x21-dev
  namespace: ns-sae5-x21
spec:
  replicas: 1
  selector:
    matchLabels:
      component: sfapi-dev
  template:
    metadata:
      labels:
        component: sfapi-dev
    spec:
      containers:
        - name: sfapi-sae5-x21-dev
          image: $CI_REGISTRY/$CI_PROJET/$DOCKER_IMAGE_TAG-dev
          ports:
            - containerPort: 9000
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/sh"
                  - "-c"
                  - >
                    cd /app/sfapi && composer install -n &&
                    php bin/console assets:install public &&
                    mkdir migrations &&
                    php bin/console make:migration -n &&
                    php bin/console doctrine:migrations:migrate -n &&
                    php bin/console d:f:l -q
          volumeMounts:
            - name: sfapi-public
              mountPath: /app/sfapi/public
      volumes:
        - name: sfapi-public
          emptyDir: { }
      imagePullSecrets:
        - name: gitlab-auth
