k8s/dev/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-sae5-x21-dev
  namespace: ns-sae5-x21
  labels:
    component: nginx-dev
spec:
  type: ClusterIP
  selector:
    component: nginx-dev
  ports:
    - port: 80
      targetPort: 80
