k8s/dev/svc-sfapi.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-sfapi-sae5-x21-dev
  namespace: ns-sae5-x21
  labels:
    component: sfapi-dev
spec:
  type: ClusterIP
  selector:
    component: sfapi-dev
  ports:
    - port: 9000
      targetPort: 9000
