k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sae5-x21-dev
  namespace: ns-sae5-x21
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - host: sae5-x21-api-dev.labs.iut-larochelle.fr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-sfapi-sae5-x21-dev
                port:
                  number: 80
